fix z-index of fade bar in about.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,6 +92,7 @@ a, a:visited {
     height: 60%;
     text-align: center;
     z-index: 2;
+    text-shadow: 3px 4px 5px black;
 }
 
 .sm-icons {
@@ -261,7 +262,7 @@ a.link_active:hover {
     position: absolute;
     top: 0;
     width: 100%;
-    height: 200px;
+    height: 120px;
     margin: 0 auto;
     background: linear-gradient(black, transparent);
     z-index: 3;
@@ -273,7 +274,7 @@ a.link_active:hover {
     position: relative;
     top: 80vh;
     background: linear-gradient(transparent,rgba(41, 41, 41, .5));
-    z-index: 2;
+    z-index: 1;
 }
 
 .scroll-logo-about {
@@ -968,7 +969,7 @@ a.link_active:hover {
         position: fixed;
         top: 0;
         width: 100%;
-        height: 200px;
+        height: 120px;
         margin: 0 auto;
         background: linear-gradient(black, transparent);
         z-index: 4;
